--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -21,7 +21,7 @@
 
             <div class="card-body">
                 <div class="offset-md-2 col-md-8">
-                    <h5>About</h5><br>
+                    <h5 class="mt-5">About</h5><br>
                     <p>We provide an API for you to use your visualization on your website or Microsoft PowerPoint
                         presentation.</p>
                     <hr><br>
