--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="col-md-6 offset-md-4 mb-4 mt-5">
-        <div class="row">
+        <div class="row align-items-end">
             <img class="mr-3" src="../../assets/image/logo_transparent.png" style="width: 100px; height: 100px;">
             <div>
-                <h1>Hi, {{user.firstName}}!</h1>
+                <h2>Hi, {{user.firstName}}!</h2>
                 <h3>Welcome to Visualization Platform.</h3>
             </div>
         </div>  
@@ -175,7 +175,7 @@
                         A : We require a specific data and config file format for each template <a routerLink="/tutorial"><u>Learn more</u></a>. And we currently support only CSV and JSON files. 
                     </p>
                     <p class="mr-5"><strong>Q : How can I use the generated visualization ?</strong><br>
-                        A : You can use it on your websites with <strong>&lt;embed&gt;</strong> or <strong> &lt;iframe&gt;</strong> <a href="https://www.w3schools.com/tags/tag_iframe.asp"><u> see more (w3schools)</u></a>. You can also use it on your Microsoft PowerPoint presentation.
+                        A : You can use it on your websites with &lt;embed&gt; or &lt;iframe&gt; <a href="https://www.w3schools.com/tags/tag_iframe.asp"><u> see more (w3schools)</u></a>. You can also use it on your Microsoft PowerPoint presentation.
                     </p>
                 </div>
             </div>
