--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,7 +23,7 @@
     image : <a href="http://www.freepik.com">Designed by fullvector / Freepik</a>
     
     <div class="text-center p-3">
-       <a routerLink="/tutorial"><button class="button" type="submit"><span>Get Started </span></button></a>
+       <a routerLink="/tutorial"><button class="button" type="submit"><span>GET STARTED </span></button></a>
     </div>
     
 
