--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <h4 class="card-header">Log in</h4>
+<div class="card mt-5">
+    <h5 class="card-header bg-dark text-white">Log in</h5>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -17,12 +17,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="btn btn-dark-blue btn-rounded">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
-                </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
+                    Log In
+                </button>            
             </div>
         </form>
     </div>
+</div>
+<div class="text-center mt-3">
+    <p> Don't have an account? <a routerLink="../register"><u>Sign Up</u></a></p>
 </div>
