--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <h4 class="card-header">Register</h4>
+<div class="card mt-5">
+    <h5 class="card-header bg-dark text-white">Create account</h5>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -36,9 +36,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="btn btn-dark-blue btn-rounded">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Register
+                    Sign Up
                 </button>
                 <a routerLink="../login" class="btn btn-link">Cancel</a>
             </div>
