--- a/src/app/templates/add-edit.component.html
+++ b/src/app/templates/add-edit.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-8 offset-md-2">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="form-group mt-5 mb-5">
-                    <h6>Template name :</h6>
+                    <h6>Template name </h6>
                     <input type="text" [readonly]="isEditMode" formControlName="templateName" class="form-control mt-3"
                         [ngClass]="{ 'is-invalid': submitted && f.templateName.errors}" />
                     <div *ngIf="submitted && f.templateName.errors" class="invalid-feedback">
@@ -16,16 +16,15 @@
                 </div>
 
                 <div class="form-group mt-5 mb-5">
-                    <h6>Description :</h6>
-                    <textarea cols="30" rows="10" formControlName="description" class="form-control mt-3"
-                        [ngClass]="{ 'is-invalid': submitted && f.description.errors}"></textarea>
+                    <h6>Description </h6>
+                    <angular-editor formControlName="description" [config]="editorConfig" [ngClass]="{ 'is-invalid': submitted && f.description.errors}"></angular-editor>
                     <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
                         <div *ngIf="f.description.errors.required">Template description is required</div>
                     </div>
                 </div>
 
                 <div class="form-group mt-5 mb-5">
-                    <h6 class="mb-3">Template Image :</h6>
+                    <h6 class="mb-3">Template Image </h6>
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" formControlName="img"
                             (change)="onFileChange('img',$event)"
