--- a/src/app/tutorial-th/tutorial-th.component.html
+++ b/src/app/tutorial-th/tutorial-th.component.html
@@ -20,7 +20,7 @@
 
             <div class="card-body">
                 <div class="offset-md-2 col-md-8">
-                    <h5>ภาพรวม</h5>
+                    <h5 class="font-body font-24 mt-5 mb-4"><strong>ภาพรวม</strong></h5>
                     <ul>
                         <li><a class="text-primary" (click)="scroll(first)"><u>วิธีการใช้งานทีละขั้นตอน</u></a>
                             <ul>
@@ -42,7 +42,7 @@
                     <hr>
 
                     <div #first>
-                        <h4 class="mt-5">วิธีการใช้งานทีละขั้นตอน</h4><br>
+                        <h4 class="font-body font-24 mt-5"><strong>วิธีการใช้งานทีละขั้นตอน</strong></h4>
                         <p>นี่คือคำแนะนำทีละขั้นตอนเกี่ยวกับวิธีสร้าง visualization บน visualization platform</p>
 
                         <div class="my-5" #first_1>
@@ -105,7 +105,7 @@
 
                     <div #second>
                         <div class="my-5" *ngIf="templates">
-                            <h4>รายละเอียดเทมเพลตต่างๆ</h4>
+                            <h4 class="font-body font-24"><strong>รายละเอียดเทมเพลตต่างๆ</strong></h4>
                             <table class="table table-hover my-3">
                                 <thead>
                                     <tr>
