--- a/src/app/tutorial/template.component.html
+++ b/src/app/tutorial/template.component.html
@@ -4,10 +4,8 @@
     </div>
 
     <div class="card-body">
-        <div class="offset-md-1 col-md-10 my-5">
-            <div class="mb-5 mt-5">
-                <p><strong>Description : </strong> {{template.description}}</p>
-            </div>
+            <div class="col-md-8 offset-md-2 mb-5 mt-5">
+                <div [innerHTML]="template.description"></div>
             <img class="card-img-top mt-5 mb-5" src="{{apiUrl}}/static/{{template.img}}">
             <table class="table table-hover my-5">
                 <thead>
@@ -34,7 +32,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="offset-md-1 col-md-10">
+        <div class="col-md-10 offset-md-1 my-5">
             <div class="my-5">
                 <h5>Live Example</h5>
             </div>
