add css, add announcement
- add some css
- rework main page
-  add announcement system

--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-5">
-    <h5 class="card-header bg-dark text-white">Create account</h5>
+    <h5 class="card-header">Create account</h5>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
