--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,13 +1,15 @@
-<div class="d-flex justify-content-center p-3">
-    <div class="row p-3">
+<video autoplay muted loop id="myVideo">
+    <source src="../../assets/image/Earth_Spin_In_Hands.mp4" type="video/mp4">
+</video>
+
+<div class="content">
+    <div class="row justify-content-center align-items-end">
         <img src="../../assets/image/logo_transparent.png" style="width: 100px; height: 100px;">
         <h1 style=" margin-left: 20px;">Visualization Platform</h1>
-    </div> 
+    </div>
+    <p class="font-20">Create your own interactive visualization easily.</p> 
 </div>
-<div class="col-md-6 offset-md-3 mt-3">
-    <!--div class="custom-text-box">
-        <h1 style="color: white;">Simply create your own Interactive Visualization</h1>
-    </div-->
+<!--div class="col-md-6 offset-md-3 mt-3">
     <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
         <mdb-carousel-item>
             <img class="carousel-img" src="../../assets/image/1.jpg" alt="First slide" style="max-height: 600px; max-width: 100%;object-fit: cover;">
@@ -27,4 +29,4 @@
     </div>
     
 
-</div>
+</div-->
