--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -1,5 +1,5 @@
 <div class="card my-5">
-    <div class="card-header text-white bg-dark">
+    <div class="card-header">
         <h4 *ngIf="isAddMode">Add User</h4>
         <h4 *ngIf="!isAddMode">Edit User</h4>
     </div>
