--- a/src/app/account/login.component.html
+++ b/src/app/account/login.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-5">
-    <h5 class="card-header bg-dark text-white">Log in</h5>
+    <h5 class="card-header">Log in</h5>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
