--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,23 @@
     padding-right: 1rem;
     padding-left: 1rem;
 }
+.navbar{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    overflow: hidden;
+    width: 100%;
+    background-color: #3333;
+}
+.navbar a {
+    float: left;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  .navbar a:hover {
+    background: #ddd;
+    color: black;
+  }
+  
