--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,33 @@
                 <h2>Hi, {{user.firstName}}!</h2>
                 <h3>Welcome to Visualization Platform.</h3>
             </div>
-        </div>  
+        </div>
     </div>
 
-    <div class="row p-4" *ngIf="user.role == 'user' || user.role == 'designer'" >
+    <div class="row p-4" *ngIf="user.role == 'user' || user.role == 'designer'">
         <div class="col-md-8 mb-4">
+            <div class="card mb-4">
+                <h4 class="card-header">Announcements</h4>
+                <div class="card-body">
+                    <div class="row mx-1">
+                        <button class="btn btn-success ml-auto" *ngIf="user.role == 'designer'"
+                            routerLink="/announcement/add">+ add new announcement</button>
+                    </div>
+                    <ul *ngIf="announcements">
+                        <li *ngFor="let announcement of announcements"><a
+                                routerLink="/announcement/details/{{announcement.id}}">{{announcement.title}}</a>
+                            <button *ngIf="user.id==announcement.uid" class="btn btn-sm btn-primary ml-3"
+                                routerLink="/announcement/edit/{{announcement.id}}">edit</button>
+                            <button *ngIf="user.id==announcement.uid" (click)="delete_(announcement.id)"
+                                class="btn btn-sm btn-danger btn-delete-user ml-2" [disabled]="announcement.isDeleting">
+                                <span *ngIf="announcement.isDeleting" class="spinner-border spinner-border-sm"></span>
+                                <span *ngIf="!announcement.isDeleting">Delete</span>
+                            </button>
+                        </li>
+                    </ul>
+                    <a routerLink="/announcement">[more]</a>
+                </div>
+            </div>
             <div class="card mb-4" *ngIf="count > 0">
                 <h4 class="card-header">Recently Generated Visualizations</h4>
                 <div class="card-body">
@@ -21,10 +43,10 @@
                                     style="color: inherit;text-decoration: none;">
                                     <div class="card m-3" style="width: 18rem;">
                                         <img class="card-img-top" src="{{apiUrl}}/static/{{item.img}}"
-                                            alt="Card image cap">
+                                            alt="Card image cap" />
                                         <div class="card-body mt-auto">
+                                            <h5 class="card-title">{{item.template}}</h5>
                                             <div class="card-text">
-                                                <h6>{{item.template}}</h6>
                                                 <div class="row pl-3 pr-3">
                                                     <p>
                                                         RefId : {{item.refId}}
@@ -37,8 +59,7 @@
                                 </a>
                                 <div *ngIf="item.status=='inactive'" class="card m-3 d-flex justify-content-start "
                                     style="width: 18rem;background-color: rgba(245, 245, 245, 1);opacity: .5;">
-                                    <img class="card-img-top" src="{{apiUrl}}/static/{{item.img}}"
-                                        alt="Card image cap">
+                                    <img class="card-img-top" src="{{apiUrl}}/static/{{item.img}}" alt="Card image cap">
                                     <div class="card-body mt-auto">
                                         <div class="card-text">
                                             <h6>{{item.template}}</h6>
@@ -63,8 +84,7 @@
                     <owl-carousel-o [options]="customOptions">
                         <ng-container *ngFor="let template of templates">
                             <ng-template carouselSlide>
-                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}"
-                                    alt="card image">
+                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}" alt="card image">
                                 <a routerLink="/tutorial/details/{{template.id}}">
                                     <div class="text-center">
                                         <p>{{template.TemplateName}}</p>
@@ -83,70 +103,76 @@
                 <div class="card-body">
                     <div *ngIf="count > 0" class="row mb-3">
                         <a routerLink="/generate" class="btn btn-success btn-success mb-2 ml-3">+ Generate New
-                            Visualization</a>  
+                            Visualization</a>
                         <div class="ml-auto mr-3 mt-2">
                             <p>You have active : {{countActive}}/20 Visualizations</p>
                         </div>
                     </div>
 
                     <div *ngIf="templates && count > 0">
-                    <table class="table table-striped">
-                        <thead >
-                            <tr>
-                                <th style="width: 30%">Refid</th>
-                                <th style="width: 30%">Template</th>
-                                <th style="width: 30%">Status</th>
-                                <th style="width: 10%"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of items">
-                                <td>{{item.refId}}</td>
-                                <td>{{item.template}}</td>
-                                <td><p class="text-success" *ngIf="item.status == 'active'">{{item.status}}</p>
-                                    <p class="text-warning" *ngIf="item.status == 'inactive'">{{item.status}}</p></td>
-                                <td style="white-space: nowrap">
-                                    <a routerLink="/generate/result/{{item.refId}}" class="btn btn-sm btn-primary mr-1"
-                                        *ngIf="item.status=='active'">View</a>
-                                    <a class="btn btn-sm btn-secondary disabled mr-1"
-                                        *ngIf="item.status=='inactive'">View</a>
-                                    <div ngbDropdown class="d-inline-block">
-                                        <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1"
-                                            ngbDropdownToggle>Manage</button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
-                                            <a *ngIf="item.status=='active'" routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item"
-                                                    [disabled]="item.status=='inactive'">Edit</button></a>
-                                            <a *ngIf="item.status=='inactive'"><button class="dropdown-item"
-                                                    [disabled]="item.status=='inactive'">Edit</button></a>
-                                            <button class="dropdown-item" (click)="delete(item.id,item.refId)"
-                                                [disabled]="item.isDeleting">
-                                                <span *ngIf="item.isDeleting"
-                                                    class="spinner-border spinner-border-sm"></span>
-                                                <span *ngIf="!item.isDeleting">Delete</span>
-                                            </button>
-                                            <button class="dropdown-item"
-                                                (click)="updateActivate(item.refId,item.status)">{{item.status=='active'
-                                                ?
-                                                'Deactive' : 'Active'}}</button>
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th style="width: 30%">Refid</th>
+                                    <th style="width: 30%">Template</th>
+                                    <th style="width: 30%">Status</th>
+                                    <th style="width: 10%"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of items">
+                                    <td>{{item.refId}}</td>
+                                    <td>{{item.template}}</td>
+                                    <td>
+                                        <p class="text-success" *ngIf="item.status == 'active'">{{item.status}}</p>
+                                        <p class="text-warning" *ngIf="item.status == 'inactive'">{{item.status}}</p>
+                                    </td>
+                                    <td style="white-space: nowrap">
+                                        <a routerLink="/generate/result/{{item.refId}}"
+                                            class="btn btn-sm btn-primary mr-1" *ngIf="item.status=='active'">View</a>
+                                        <a class="btn btn-sm btn-secondary disabled mr-1"
+                                            *ngIf="item.status=='inactive'">View</a>
+                                        <div ngbDropdown class="d-inline-block">
+                                            <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1"
+                                                ngbDropdownToggle>Manage</button>
+                                            <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
+                                                <a *ngIf="item.status=='active'"
+                                                    routerLink="/generate/edit/{{item.refId}}"><button
+                                                        class="dropdown-item"
+                                                        [disabled]="item.status=='inactive'">Edit</button></a>
+                                                <a *ngIf="item.status=='inactive'"><button class="dropdown-item"
+                                                        [disabled]="item.status=='inactive'">Edit</button></a>
+                                                <button class="dropdown-item" (click)="delete(item.id,item.refId)"
+                                                    [disabled]="item.isDeleting">
+                                                    <span *ngIf="item.isDeleting"
+                                                        class="spinner-border spinner-border-sm"></span>
+                                                    <span *ngIf="!item.isDeleting">Delete</span>
+                                                </button>
+                                                <button class="dropdown-item"
+                                                    (click)="updateActivate(item.refId,item.status)">{{item.status=='active'
+                                                    ?
+                                                    'Deactive' : 'Active'}}</button>
+                                            </div>
                                         </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr *ngIf="!items">
-                                <td colspan="4" class="text-center">
-                                    <span class="spinner-border spinner-border-lg align-center"></span>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="text-center mt-5 mb-5" *ngIf="count == 0">
-                    <h5 class="mb-5">You have not generated any Visualization yet.</h5>
-                    <div class="row d-flex justify-content-center">
-                        <button class="btn btn-lg btn-success btn-block ml-5 mr-5 mb-3" routerLink="/tutorial">Read the guide</button>
-                        <button class="btn btn-lg btn-outline-dark btn-block ml-5 mr-5" routerLink="/generate">Generate</button>
+                                    </td>
+                                </tr>
+                                <tr *ngIf="!items">
+                                    <td colspan="4" class="text-center">
+                                        <span class="spinner-border spinner-border-lg align-center"></span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </div>
+                    <div class="text-center mt-5 mb-5" *ngIf="count == 0">
+                        <h5 class="mb-5">You have not generated any Visualization yet.</h5>
+                        <div class="row d-flex justify-content-center">
+                            <button class="btn btn-lg btn-success btn-block ml-5 mr-5 mb-3" routerLink="/tutorial">Read
+                                the guide</button>
+                            <button class="btn btn-lg btn-outline-dark btn-block ml-5 mr-5"
+                                routerLink="/generate">Generate</button>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -163,31 +189,40 @@
                 <h4 class="card-header">FAQ</h4>
                 <div class="card-body ml-5 mr-5 mt-3">
                     <p class="mr-5"><strong>Q : What is Visualization Platform ?</strong><br>
-                        A : Visualization Platform is a platform that provides a way to create interactive visualization easily for everyone.
+                        A : Visualization Platform is a platform that provides a way to create interactive visualization
+                        easily for everyone.
                     </p>
                     <p class="mr-5"><strong>Q : Why Visualization Platform ?</strong><br>
-                        A : You can create a variety of interactive visualization. Just hand us some data and a little configuration. 
+                        A : You can create a variety of interactive visualization. Just hand us some data and a little
+                        configuration.
                     </p>
                     <p class="mr-5"><strong>Q : How can I create a visualization ?</strong><br>
-                        A : You can learn more about how to create a visualization <a routerLink="/tutorial"><u>Here</u></a>. We made a guide for you.  
+                        A : You can learn more about how to create a visualization <a
+                            routerLink="/tutorial"><u>Here</u></a>. We made a guide for you.
                     </p>
-                    <p class="mr-5"><strong>Q : I generated a visualization but nothing is showing, What I did wrong ?</strong><br>
-                        A : We require a specific data and config file format for each template <a routerLink="/tutorial"><u>Learn more</u></a>. And we currently support only CSV and JSON files. 
+                    <p class="mr-5"><strong>Q : I generated a visualization but nothing is showing, What I did wrong
+                            ?</strong><br>
+                        A : We require a specific data and config file format for each template <a
+                            routerLink="/tutorial"><u>Learn more</u></a>. And we currently support only CSV and JSON
+                        files.
                     </p>
                     <p class="mr-5"><strong>Q : How can I use the generated visualization ?</strong><br>
-                        A : You can use it on your websites with &lt;embed&gt; or &lt;iframe&gt; <a href="https://www.w3schools.com/tags/tag_iframe.asp"><u> see more (w3schools)</u></a>. You can also use it on your Microsoft PowerPoint presentation.
+                        A : You can use it on your websites with &lt;embed&gt; or &lt;iframe&gt; <a
+                            href="https://www.w3schools.com/tags/tag_iframe.asp"><u> see more (w3schools)</u></a>. You
+                        can also use it on your Microsoft PowerPoint presentation.
                     </p>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 
-    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'" >
+    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'">
         <div class="col-md-8 mb-4">
             <div class="card mb-4" *ngIf="count > 0">
                 <div class="card-header">New Users</div>
                 <div class="card-body">
-                    <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
+                    <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;">
+                    </div>
                 </div>
             </div>
         </div>
