--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -1,5 +1,5 @@
 <div class="card my-5">
-    <div class="card-header text-white bg-dark">
+    <div class="card-header">
         <h4>Users</h4>
     </div>
     <div class="card-body">
