--- a/src/styles.css
+++ b/src/styles.css
@@ -23,8 +23,9 @@ body {
   margin: 0;
   background-image: url(./assets/image/bg4.jpg);
   background-repeat: repeat-y;
-  background-size: contain;
-  margin-bottom: 200px;
+  background-size: 100% auto;
+  margin-top: 50px;
+  /*margin-bottom: 200px;*/
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
   font-size: .9375rem;
@@ -67,7 +68,6 @@ input strong, button strong, select strong, textarea strong, body strong, .main-
 }
 
 .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
-  color: #4a4a4a;
   font-family: "Source Sans Pro", lucida grande, Arial, sans-serif;
 }
 
@@ -139,4 +139,13 @@ iframe {
 
 .btn-rounded{
   border-radius: 35px;
+}
+
+.card-header{
+  background-color: rgb(0, 10, 37);
+  background-image: url(../src/assets/image/card-header-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right center;
+  color: white;
 }
